src/Test/Fixtures/Good/TypeQualifier/linearSpaceBeforeColonQubit.lf
let linear q : qubit = qalloc();
