src/Test/Fixtures/Bad/BitQubit/unexpectedSecondQallocInQubitDeclaration.lf
let q : qubit = qalloc() qalloc();